--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,57 +13,57 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-07 Fri 11:54]
+#+CAPTION: Clock summary at [2016-10-07 Fri 12:45]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *81:31* |       |       | 100.0 |
+| *Total time*                                                                | *82:21* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 81:31   |       |       | 100.0 |
-| Active                                                                      |         | 81:31 |       | 100.0 |
+| Stories                                                                     | 82:21   |       |       | 100.0 |
+| Active                                                                      |         | 82:21 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
-| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.1 |
+| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.0 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.2 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.1 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.4 |
 | COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.4 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   1.0 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.6 |
-| COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.8 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.5 |
+| COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.7 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       |  0:23 |   0.5 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.8 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.7 |
 | COMPLETED Run tests that are passing on windows                             |         |       |  0:10 |   0.2 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.8 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.7 |
 | COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.3 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
-| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.6 |
+| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.5 |
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.7 |
 | COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.9 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.9 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.8 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.4 |
 | COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.5 |
 | COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.6 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.7 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.6 |
 | COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.8 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.5 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   4.2 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   4.1 |
 | COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   5.1 |
+| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   5.0 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.7 |
-| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   4.0 |
+| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.9 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
 | COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.5 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
-| COMPLETED Improve project banner                                            |         |       |  0:32 |   0.7 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  13.1 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.8 |
-| STARTED Create a dynamic expander in yarn                                   |         |       |  0:38 |   0.8 |
-| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.8 |
+| COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  13.0 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.7 |
+| STARTED Create a dynamic expander in yarn                                   |         |       |  1:28 |   1.8 |
+| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.7 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1289,6 +1289,7 @@ mind we are traversing a graph, so this would have to be done in the
 graph itself - not ideal. This story needs more thinking.
 
 *** STARTED Create a dynamic expander in yarn                         :story:
+    CLOCK: [2016-10-07 Fri 11:55]--[2016-10-07 Fri 12:45] =>  0:50
     CLOCK: [2016-10-07 Fri 11:36]--[2016-10-07 Fri 11:54] =>  0:18
     CLOCK: [2016-10-06 Thu 13:03]--[2016-10-06 Thu 13:23] =>  0:20
 
