--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-07 Fri 13:08]
+#+CAPTION: Clock summary at [2016-10-07 Fri 13:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *82:42* |       |       | 100.0 |
+| *Total time*                                                                | *82:48* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 82:42   |       |       | 100.0 |
-| Active                                                                      |         | 82:42 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.7 |
+| Stories                                                                     | 82:48   |       |       | 100.0 |
+| Active                                                                      |         | 82:48 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.0 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
@@ -57,12 +57,12 @@
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.7 |
 | COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.9 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
-| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.5 |
+| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.4 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
 | CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.9 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.7 |
-| STARTED Create a dynamic expander in yarn                                   |         |       |  1:49 |   2.2 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.6 |
+| STARTED Create a dynamic expander in yarn                                   |         |       |  1:55 |   2.3 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.7 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -1289,6 +1289,7 @@ mind we are traversing a graph, so this would have to be done in the
 graph itself - not ideal. This story needs more thinking.
 
 *** STARTED Create a dynamic expander in yarn                         :story:
+    CLOCK: [2016-10-07 Fri 13:09]--[2016-10-07 Fri 13:15] =>  0:06
     CLOCK: [2016-10-07 Fri 12:53]--[2016-10-07 Fri 13:08] =>  0:15
     CLOCK: [2016-10-07 Fri 12:46]--[2016-10-07 Fri 12:52] =>  0:06
     CLOCK: [2016-10-07 Fri 11:55]--[2016-10-07 Fri 12:45] =>  0:50
@@ -1296,6 +1297,13 @@ graph itself - not ideal. This story needs more thinking.
     CLOCK: [2016-10-06 Thu 13:03]--[2016-10-06 Thu 13:23] =>  0:20
 
 We need to move this work from the front end into yarn.
+
+Notes:
+
+- move raw kvps to dynamic
+- as first step, add dynamic expander doing one object at a time;
+  remove all references to workflow.
+- look at stitch code and see how this refactor will impact it.
 
 Tasks:
 
