--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-07 Fri 13:15]
+#+CAPTION: Clock summary at [2016-10-07 Fri 18:08]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *82:48* |       |       | 100.0 |
+| *Total time*                                                                | *83:58* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 82:48   |       |       | 100.0 |
-| Active                                                                      |         | 82:48 |       | 100.0 |
+| Stories                                                                     | 83:58   |       |       | 100.0 |
+| Active                                                                      |         | 83:58 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.0 |
@@ -39,30 +39,30 @@
 | COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
 | COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.5 |
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.7 |
-| COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.9 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.8 |
+| COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.8 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.7 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.4 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.5 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.4 |
 | COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.6 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.6 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.4 |
 | COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.8 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.5 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   4.1 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   4.0 |
 | COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   5.0 |
+| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.9 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.7 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.6 |
 | COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.9 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
 | COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.4 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.9 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.6 |
-| STARTED Create a dynamic expander in yarn                                   |         |       |  1:55 |   2.3 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.7 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.5 |
+| STARTED Create a dynamic expander in yarn                                   |         |       |  3:05 |   3.7 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.7 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -1289,6 +1289,7 @@ mind we are traversing a graph, so this would have to be done in the
 graph itself - not ideal. This story needs more thinking.
 
 *** STARTED Create a dynamic expander in yarn                         :story:
+    CLOCK: [2016-10-07 Fri 17:25]--[2016-10-07 Fri 18:07] =>  0:42
     CLOCK: [2016-10-07 Fri 15:31]--[2016-10-07 Fri 15:59] =>  0:28
     CLOCK: [2016-10-07 Fri 13:09]--[2016-10-07 Fri 13:15] =>  0:06
     CLOCK: [2016-10-07 Fri 12:53]--[2016-10-07 Fri 13:08] =>  0:15
@@ -1302,6 +1303,7 @@ We need to move this work from the front end into yarn.
 Notes:
 
 - move raw kvps to dynamic
+- rename property scope type to attribute in dynamic
 - as first step, add dynamic expander doing one object at a time;
   remove all references to workflow.
 - look at stitch code and see how this refactor will impact it.
