--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-07 Fri 18:08]
+#+CAPTION: Clock summary at [2016-10-07 Fri 23:05]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *83:58* |       |       | 100.0 |
+| *Total time*                                                                | *85:34* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 83:58   |       |       | 100.0 |
-| Active                                                                      |         | 83:58 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.6 |
+| Stories                                                                     | 85:34   |       |       | 100.0 |
+| Active                                                                      |         | 85:34 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
-| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.0 |
+| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.9 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
 | COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.1 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.4 |
@@ -31,40 +31,40 @@
 | COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   1.0 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.5 |
 | COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.7 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       |  0:23 |   0.5 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       |  0:23 |   0.4 |
 | COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.7 |
 | COMPLETED Run tests that are passing on windows                             |         |       |  0:10 |   0.2 |
 | COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.7 |
 | COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.3 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
-| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.5 |
+| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.4 |
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.7 |
 | COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.8 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.7 |
-| COMPLETED Remove empty context                                              |         |       |  1:09 |   1.4 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.4 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.6 |
+| COMPLETED Remove empty context                                              |         |       |  1:09 |   1.3 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.3 |
 | COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.6 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.4 |
-| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.8 |
-| COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.5 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.3 |
+| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.7 |
+| COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.4 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
 | COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   4.0 |
 | COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.9 |
+| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.8 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.6 |
-| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.9 |
+| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.8 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
-| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.4 |
+| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.3 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.7 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.5 |
-| STARTED Create a dynamic expander in yarn                                   |         |       |  3:05 |   3.7 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.5 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.3 |
+| STARTED Create a dynamic expander in yarn                                   |         |       |  4:41 |   5.5 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.7 |
-| STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
+| STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1289,6 +1289,10 @@ mind we are traversing a graph, so this would have to be done in the
 graph itself - not ideal. This story needs more thinking.
 
 *** STARTED Create a dynamic expander in yarn                         :story:
+    CLOCK: [2016-10-07 Fri 23:01]--[2016-10-07 Fri 23:05] =>  0:04
+    CLOCK: [2016-10-07 Fri 22:20]--[2016-10-07 Fri 23:00] =>  0:40
+    CLOCK: [2016-10-07 Fri 18:44]--[2016-10-07 Fri 19:01] =>  0:17
+    CLOCK: [2016-10-07 Fri 18:08]--[2016-10-07 Fri 18:43] =>  0:35
     CLOCK: [2016-10-07 Fri 17:25]--[2016-10-07 Fri 18:07] =>  0:42
     CLOCK: [2016-10-07 Fri 15:31]--[2016-10-07 Fri 15:59] =>  0:28
     CLOCK: [2016-10-07 Fri 13:09]--[2016-10-07 Fri 13:15] =>  0:06
@@ -1500,6 +1504,11 @@ Further thoughts:
   instantiates stitch (probably within quilt) with the parameters and
   generates the file. Actually we probably can't have this in quilt
   because we still need formatter properties.
+
+*** Fix transformer tests and hydrator tests                          :story:
+
+A number of tests got disabled as part of the dynamic refactor. Fix
+them.
 
 *** Rename properties to attributes in opaque configuration           :story:
 
